--- a/index.html
+++ b/index.html
@@ -23,16 +23,16 @@
       </div>
       <ul>
         <li>
-          <a href="https://www.youtube.com/watch?v=8nvLaPXsIhQ" target="_blank">Mães solteiras a 5km</a>
+          <a href="https://github.com" target="_blank">GitHub</a>
         </li>
         <li>
-          <a href="https://www.baixaki.com.br" target="_blank">Baixar jogos de graça</a>
+          <a href="https://www.youtube.com" target="_blank">Youtube</a>
         </li>
         <li>
-          <a href="https://blaze.com/pt/" target="_blank">Como fazer uma renda extra</a>
+          <a href="https://www.linkedin.com" target="_blank">Linkedin</a>
         </li>
         <li>
-          <a href="https://www.youtube.com/watch?v=Oqrm-9Wy8iU" target="_blank">Clique.</a>
+          <a href="https://www.pichau.com.br" target="_blank">Pichau</a>
         </li>
       </ul>
         <div id="social">
